# tracing

./: .gitmodules  CMakeLists.txt  README.md  averager.hxx  cubify.cxx  dmetric.c.glsl  gen.hxx  grid.py  io.hxx  iters.hxx  main.cxx  material.hxx  math.hxx  prog2.cxx  prog3.cxx  prog4.cxx  prog5.cxx  prog6.cxx  rand.hxx  render.cxx  render.hxx  riemann.c.glsl  scatter.cxx  scene.cxx  scene.hxx  screen_quad.f.glsl  screen_quad.g.glsl  screen_quad_cube.f.glsl  screen_quad_uv.f.glsl  shader.cxx  shader.hxx  shape.hxx  side.c.glsl  space.glsl  texture.hxx  trace.cxx  trace.glsl  trace.hxx  tracer.f.glsl  tracer.g.glsl  (+2 more)
desc/: box.hxx  coil.hxx  euclidean.hxx  fast.hxx  flat.hxx  ray.hxx  riemann.hxx
material/: base.hxx  sample.hxx
prog5/: glshape.hxx  gpu.hxx  subspace.hxx  thing.hxx  universe.hxx  visual.hxx
shape/: base.hxx  sample.hxx
